# ComputationalMathLab1

./: CMakeLists.txt  README.md
include/: app.h
include/containers/: singly_linked_list.h
include/exceptions/: exceptions.h
include/io/: io_handler.h
include/string_utils/: string_s.h
include/utils/: printer.h
linear_equations_solver/include/: app.h
linear_equations_solver/include/chart/: gtk_chart.h
linear_equations_solver/include/command/: command.h
linear_equations_solver/include/console/: console.h
linear_equations_solver/include/containers/: singly_linked_list.h
linear_equations_solver/include/exceptions/: exceptions.h
linear_equations_solver/include/linear_algebra/: lin_eq_solver.h  matrix.h  quad_matrix.h
linear_equations_solver/include/string_utils/: string_s.h
linear_equations_solver/include/utils/: printer.h
linear_equations_solver/resources/glade_templates/: main.glade
linear_equations_solver/src/: app.c  main.c
linear_equations_solver/src/chart/: gtk_chart.c
linear_equations_solver/src/command/: command.c
linear_equations_solver/src/console/: console.c
linear_equations_solver/src/containers/: singly_linked_list.c
linear_equations_solver/src/exceptions/: exceptions.c
linear_equations_solver/src/io/: io_handler.c
linear_equations_solver/src/linear_algebra/: lin_eq_solver.c  matrix.c  quad_matrix.c
linear_equations_solver/src/utils/: printer.c
src/: app.c  main.c
src/containers/: singly_linked_list.c
src/exceptions/: exceptions.c
src/io/: io_handler.c
src/string_utils/: string_s.c
src/utils/: printer.c
(+1 files in other folders)
